<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/carrito"
        app:showAsAction="always" />

    <item
        android:id="@+id/cancelar_pedido"
        android:icon="@drawable/capusha"
        android:orderInCategory="1"
        android:title="@string/cancelar_pedido" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="2"
        android:title="@string/perfil" />

    <item
        android:id="@+id/comYsug"
        android:orderInCategory="3"
        android:title="@string/comentarios_y_sugerencias" />

</menu>